--- a/BSBDJ/BSBDJ/Class/精华/View/RSTopicCell.xib
+++ b/BSBDJ/BSBDJ/Class/精华/View/RSTopicCell.xib
@@ -3,11 +3,12 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="119" id="KGk-i7-Jjw" customClass="RSTopicCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="topic" rowHeight="119" id="KGk-i7-Jjw" customClass="RSTopicCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="351"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -31,11 +32,8 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gDC-am-VyB" userLabel="内容">
-                        <rect key="frame" x="10" y="55" width="35.5" height="17"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="17" id="Zfh-by-5XF"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gDC-am-VyB" userLabel="内容">
+                        <rect key="frame" x="10" y="55" width="292" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -189,6 +187,7 @@
                     <constraint firstAttribute="trailing" secondItem="6mg-lT-FP9" secondAttribute="trailing" id="DaD-WT-Y9F"/>
                     <constraint firstItem="6mg-lT-FP9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="IAC-Y2-zDX"/>
                     <constraint firstItem="kXU-OO-NZs" firstAttribute="leading" secondItem="RcY-U4-J7e" secondAttribute="trailing" constant="10" id="KMF-d6-XZm"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="gDC-am-VyB" secondAttribute="trailing" constant="10" id="a2J-Ti-EaI"/>
                     <constraint firstItem="VYY-IS-kmB" firstAttribute="leading" secondItem="bQ0-Yf-qvU" secondAttribute="trailing" constant="5" id="acJ-kO-YTX"/>
                     <constraint firstItem="RcY-U4-J7e" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="cgD-Ls-fNr"/>
                     <constraint firstItem="VYY-IS-kmB" firstAttribute="top" secondItem="kXU-OO-NZs" secondAttribute="bottom" constant="2" id="eLX-hx-cBb"/>
@@ -202,10 +201,14 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="bottomToolLabel" destination="6mg-lT-FP9" id="xSc-nq-ezf"/>
+                <outlet property="caiBtn" destination="kWe-aM-Qoo" id="g3x-oo-xFS"/>
                 <outlet property="comContentLabel" destination="7Lk-KO-qkX" id="ABU-uA-LaC"/>
                 <outlet property="commentLabel" destination="OIk-zt-3AN" id="vcp-aG-ol0"/>
+                <outlet property="dingBtn" destination="4ko-8D-yfF" id="Lzu-rS-d9V"/>
                 <outlet property="headImage" destination="RcY-U4-J7e" id="OV3-Bs-ACa"/>
+                <outlet property="mesBtn" destination="cCB-lS-ID3" id="K9u-hV-Oos"/>
                 <outlet property="nameLabel" destination="kXU-OO-NZs" id="elz-jw-8QB"/>
+                <outlet property="shareBtn" destination="dwB-H8-NAA" id="Khy-iN-gOG"/>
                 <outlet property="sinaV" destination="bQ0-Yf-qvU" id="X6L-qZ-rQE"/>
                 <outlet property="timeLabel" destination="VYY-IS-kmB" id="EgF-Pj-uH2"/>
                 <outlet property="topContentLabel" destination="gDC-am-VyB" id="UpT-8F-Hmg"/>
